tests/NormalTests/paczka1/small_fuzzy/14410381.err
Error in line 8: A337 S861 79,2
Error in line 11: JmIe2x S861 73,3
Error in line 14: JmIe2x A337 93,4
